added reference line smoother test
varified that the smoothing algorithm works

--- a/modules/perception/lib/base/BUILD
+++ b/modules/perception/lib/base/BUILD
@@ -1,3 +1,5 @@
+load("//tools:cpplint.bzl", "cpplint")
+
 package(default_visibility = ["//visibility:public"])
 
 cc_library(
@@ -10,3 +12,5 @@ cc_library(
         "//external:gflags",
     ],
 )
+
+cpplint()
