--- a/modules/planning/math/BUILD
+++ b/modules/planning/math/BUILD
@@ -48,7 +48,7 @@ cc_library(
     ],
     deps = [
         ":double",
-        "@eigen//:eigen",
+        "//modules/common/math:vec2d",
     ],
 )
 
