--- a/modules/perception/obstacle/base/BUILD
+++ b/modules/perception/obstacle/base/BUILD
@@ -1,3 +1,5 @@
+load("//tools:cpplint.bzl", "cpplint")
+
 package(default_visibility = ["//visibility:public"])
 
 cc_library(
@@ -12,3 +14,5 @@ cc_library(
     ],
 )
 
+
+cpplint()
