--- a/modules/perception/obstacle/common/BUILD
+++ b/modules/perception/obstacle/common/BUILD
@@ -1,3 +1,5 @@
+load("//tools:cpplint.bzl", "cpplint")
+
 package(default_visibility = ["//visibility:public"])
 
 cc_library(
@@ -9,3 +11,5 @@ cc_library(
         "@eigen//:eigen"
     ],
 )
+
+cpplint()
