--- a/modules/perception/obstacle/lidar/interface/BUILD
+++ b/modules/perception/obstacle/lidar/interface/BUILD
@@ -1,3 +1,5 @@
+load("//tools:cpplint.bzl", "cpplint")
+
 package(default_visibility = ["//visibility:public"])
 
 cc_library(
@@ -11,3 +13,5 @@ cc_library(
         "@eigen//:eigen",
     ]
 )
+
+cpplint()
