--- a/modules/perception/obstacle/lidar/object_builder/min_box/BUILD
+++ b/modules/perception/obstacle/lidar/object_builder/min_box/BUILD
@@ -1,3 +1,5 @@
+load("//tools:cpplint.bzl", "cpplint")
+
 package(default_visibility = ["//visibility:public"])
 
 cc_library(
@@ -15,3 +17,5 @@ cc_library(
         "@eigen//:eigen",
     ],
 )
+
+cpplint()
