--- a/modules/planning/common/speed/BUILD
+++ b/modules/planning/common/speed/BUILD
@@ -1,3 +1,5 @@
+load("//tools:cpplint.bzl", "cpplint")
+
 package(default_visibility = ["//visibility:public"])
 
 cc_library(
@@ -32,3 +34,5 @@ cc_library(
         "//modules/planning/proto:planning_proto",
     ],
 )
+
+cpplint()
