--- a/modules/planning/optimizer/qp_spline_path/BUILD
+++ b/modules/planning/optimizer/qp_spline_path/BUILD
@@ -1,3 +1,5 @@
+load("//tools:cpplint.bzl", "cpplint")
+
 package(default_visibility = ["//visibility:public"])
 
 cc_library(
@@ -43,3 +45,5 @@ cc_library(
         "@eigen//:eigen",
     ],
 )
+
+cpplint()
