--- a/WORKSPACE.in
+++ b/WORKSPACE.in
@@ -188,9 +188,9 @@ new_http_archive(
 # OpenCV 2.4.13.2
 new_http_archive(
     name = "opencv2",
-    url = "https://github.com/opencv/opencv/archive/2.4.13.2.zip",
     build_file = "third_party/opencv2.BUILD",
     strip_prefix = "opencv-2.4.13.2",
+    url = "https://github.com/opencv/opencv/archive/2.4.13.2.zip",
 )
 
 # PCL 1.7
@@ -198,14 +198,23 @@ new_http_archive(
 # This requires libpcl-dev to be installed in your Ubuntu/Debian.
 new_local_repository(
     name = "pcl",
-    path = "/usr/include/pcl-1.7",
     build_file = "third_party/pcl.BUILD",
+    path = "/usr/include/pcl-1.7",
 )
 
 # YAML-CPP
 new_http_archive(
     name = "yaml_cpp",
-    url = "https://github.com/jbeder/yaml-cpp/archive/yaml-cpp-0.5.3.zip",
     build_file = "third_party/yaml_cpp.BUILD",
     strip_prefix = "yaml-cpp-yaml-cpp-0.5.3",
+    url = "https://github.com/jbeder/yaml-cpp/archive/yaml-cpp-0.5.3.zip",
+)
+
+# qpOASES
+new_http_archive(
+    name = "qp_oases",
+    build_file = "third_party/qp_oases.BUILD",
+    sha256 = "ae15eee80455c26d0c26078498893582b67b1d71df18f14f12591023561e5f88",
+    strip_prefix = "qpOASES-3.2.1",
+    url = "https://www.coin-or.org/download/source/qpOASES/qpOASES-3.2.1.zip",
 )
