Plannning optimizers return Status instead of ErrorCode.

--- a/modules/planning/optimizer/BUILD
+++ b/modules/planning/optimizer/BUILD
@@ -10,9 +10,6 @@ cc_library(
     hdrs = [
         "optimizer.h",
     ],
-    deps = [
-        "//modules/common/proto:error_code_proto",
-    ],
 )
 
 cc_library(
@@ -25,6 +22,7 @@ cc_library(
     ],
     deps = [
         ":optimizer",
+        "//modules/common/status",
         "//modules/planning/common:data_center",
         "//modules/planning/common:decision_data",
         "//modules/planning/common:planning_data",
@@ -44,6 +42,7 @@ cc_library(
     ],
     deps = [
         ":optimizer",
+        "//modules/common/status",
         "//modules/planning/common:data_center",
         "//modules/planning/common:decision_data",
         "//modules/planning/common:planning_data",
