enable more optimizers in em_planner.

--- a/modules/planning/optimizer/BUILD
+++ b/modules/planning/optimizer/BUILD
@@ -10,6 +10,9 @@ cc_library(
     hdrs = [
         "optimizer.h",
     ],
+    deps = [
+        "//modules/common/status",
+    ],
 )
 
 cc_library(
