--- a/modules/planning/planner/em/BUILD
+++ b/modules/planning/planner/em/BUILD
@@ -25,6 +25,7 @@ cc_library(
         "//modules/planning/optimizer:speed_optimizer",
         "//modules/planning/optimizer/dp_poly_path:dp_poly_path_optimizer",
         "//modules/planning/optimizer/dp_st_speed:dp_st_speed_optimizer",
+        "//modules/planning/optimizer/qp_spline_path",
         "//modules/planning/planner",
         "//modules/planning/proto:planning_proto",
         "@eigen//:eigen",
