Replace qpSMOSolver with qpOASES

--- a/modules/common/math/BUILD
+++ b/modules/common/math/BUILD
@@ -277,6 +277,8 @@ cc_library(
     ],
     deps = [
         "//modules/common:log",
+        "//modules/common/math/qp_solver:qp_solver",
+        "//modules/common/math/qp_solver:active_set_qp_solver",
         "@eigen//:eigen",
     ],
 )
@@ -289,6 +291,8 @@ cc_test(
     ],
     deps = [
         ":mpc",
+        "//modules/common/math/qp_solver:qp_solver",
+        "//modules/common/math/qp_solver:active_set_qp_solver",
         "@gtest//:main",
     ],
 )
