adding min_box_test (#194)

--- a/modules/perception/BUILD
+++ b/modules/perception/BUILD
@@ -31,4 +31,11 @@ cc_binary(
     ],
 )
 
+filegroup(
+    name = "perception_testdata",
+    srcs = glob([
+        "testdata/**",
+    ]),
+)
+
 cpplint()
