Liuyang apollo 1.5-hdmap (#220)
* add hdmap feature

* add opendrive adapter

* add hdmap feature

* add opendrive adapter

* add hdmap interface

* add hdmap feature

* add opendrive adapter

* add hdmap feature

* add hdmap interface

* add new interface for hdmap

* add hdmap feature

* add opendrive adapter

* add hdmap feature

* add opendrive adapter

* add hdmap interface

* add hdmap feature

* add hdmap feature

* add opendrive adapter

* add hdmap interface

* add new interface for hdmap

* fix merge problem

--- a/modules/map/proto/BUILD
+++ b/modules/map/proto/BUILD
@@ -21,6 +21,7 @@ cc_proto_library(
         "map_speed_bump.proto",
         "map_stop_sign.proto",
         "map_yield_sign.proto",
+        "map_road.proto",
         "routing.proto",
     ],
     deps = [
