--- a/WORKSPACE.in
+++ b/WORKSPACE.in
@@ -218,3 +218,19 @@ new_http_archive(
     strip_prefix = "qpOASES-3.2.1",
     url = "https://www.coin-or.org/download/source/qpOASES/qpOASES-3.2.1.zip",
 )
+
+# Proj.4
+new_http_archive(
+    name = "proj4",
+    url = "https://github.com/OSGeo/proj.4/archive/4.9.3.zip",
+    build_file = "third_party/proj4.BUILD",
+    strip_prefix = "proj.4-4.9.3",
+)
+
+# tinyxml2
+new_http_archive(
+    name = "tinyxml2",
+    url = "https://github.com/leethomason/tinyxml2/archive/5.0.1.zip",
+    build_file = "third_party/tinyxml2.BUILD",
+    strip_prefix = "tinyxml2-5.0.1",
+)
