move namespace-level template functions to class-level overloaded functions so that class members can be accessed (#229)

--- a/modules/dreamview/backend/simulation_world/BUILD
+++ b/modules/dreamview/backend/simulation_world/BUILD
@@ -60,6 +60,9 @@ cc_test(
     srcs = [
         "simulation_world_service_test.cc",
     ],
+    data = [
+        "//modules/dreamview/backend/testdata",
+    ],
     deps = [
         ":simulation_world_service",
         "//modules/common/adapters:adapter_manager",
