smooth reference line by vehicle position and fix reference line crash.

--- a/modules/planning/reference_line/BUILD
+++ b/modules/planning/reference_line/BUILD
@@ -32,6 +32,7 @@ cc_library(
     ],
     deps = [
         ":reference_line",
+        "//modules/common/vehicle_state",
         "//modules/planning/math:curve_math",
         "//modules/planning/math:polynomial_xd",
         "//modules/planning/math/smoothing_spline:spline_2d",
