--- a/modules/map/hdmap/BUILD
+++ b/modules/map/hdmap/BUILD
@@ -26,7 +26,7 @@ cc_library(
 filegroup(
     name = "testdata",
     srcs = glob([
-        "test-data/*.v2",
+        "test-data/*",
     ]),
 )
 
