add perception obstacle message publish interface, and modify hdmap interface in the module of perception (#218)
* add pcl_util

* add perception common lib files

* add lidar_process, and modify code style

* add perception obstacle message publish interface

* modify hdmap interface, but it is commented out until the map module is ready

--- a/modules/perception/BUILD
+++ b/modules/perception/BUILD
@@ -11,7 +11,7 @@ cc_library(
         "//modules/common:apollo_app",
         "//modules/common/adapters:adapter_manager",
         "//modules/perception/common:perception_common",
-        # "//modules/perception/obstacle/onboard:perception_obstacle_lidar_process",
+        "//modules/perception/obstacle/onboard:perception_obstacle_lidar_process",
     ],
 )
 
