--- a/modules/perception/lib/base/BUILD
+++ b/modules/perception/lib/base/BUILD
@@ -4,8 +4,15 @@ package(default_visibility = ["//visibility:public"])
 
 cc_library(
     name = "base",
-    srcs = glob(["*.cc"]),
-    hdrs = glob(["*.h"]),
+    srcs = [
+        "file_util.cc",
+        "registerer.cc",
+    ],
+    hdrs = [
+        "file_util.h",
+        "registerer.h",
+        "singleton.h",
+    ],
     linkopts = [
         "-lboost_filesystem",
         "-lboost_system",
@@ -17,4 +24,17 @@ cc_library(
     ],
 )
 
+cc_test(
+    name = "perception_lib_base_test",
+    srcs = [
+        "file_util_test.cc",
+        "registerer_test.cc",
+        "singleton_test.cc",
+    ],
+    deps = [
+        ":base",
+        "@gtest//:main",
+    ],
+)
+  
 cpplint()
