added a dependency for dp st speed. (#258)

--- a/modules/planning/optimizer/dp_st_speed/BUILD
+++ b/modules/planning/optimizer/dp_st_speed/BUILD
@@ -85,6 +85,7 @@ cc_library(
         "//modules/localization/proto:localization_proto",
         "//modules/planning/optimizer:speed_optimizer",
         "//modules/planning/optimizer/st_graph:st_graph_data",
+        "//modules/planning/proto:dp_st_speed_config_proto",
     ],
 )
 
