--- a/modules/dreamview/backend/websocket/BUILD
+++ b/modules/dreamview/backend/websocket/BUILD
@@ -12,6 +12,7 @@ cc_library(
     ],
     deps = [
         "//modules/common:log",
+        "//modules/common/util:string_util",
         "//third_party/json",
         "@civetweb//:civetweb++",
     ],
