add unit test for perception

--- a/modules/perception/lib/base/BUILD
+++ b/modules/perception/lib/base/BUILD
@@ -26,6 +26,7 @@ cc_library(
 
 cc_test(
     name = "perception_lib_base_test",
+    size = "small",
     srcs = [
         "file_util_test.cc",
         "registerer_test.cc",
