--- a/modules/perception/obstacle/base/BUILD
+++ b/modules/perception/obstacle/base/BUILD
@@ -4,8 +4,15 @@ package(default_visibility = ["//visibility:public"])
 
 cc_library(
     name = "perception_obstacle_base",
-    srcs = glob(["*.cc"]),
-    hdrs = glob(["*.h"]),
+    srcs = [
+        "object.cc",
+        "types.cc",
+        ],
+    hdrs = [
+        "object.h",
+        "types.h",
+        "hdmap_struct.h",
+        ],
     deps = [
         "//modules/perception/lib/pcl_util:pcl_util",
         "//modules/perception/common:perception_common",
@@ -16,5 +23,17 @@ cc_library(
     ],
 )
 
+cc_test(
+    name = "perception_obstacle_base_test",
+    size = "small",
+    srcs = [
+        "object_test.cc",
+        "types_test.cc",
+    ],
+    deps = [
+        ":perception_obstacle_base",
+        "@gtest//:main",
+    ],
+)
 
 cpplint()
