move gflags to perception/common/perception_gflags.cc (#19)
* add unit test for perception

* move gflags to perception/common/perception_gflags.cc

--- a/modules/perception/lib/config_manager/BUILD
+++ b/modules/perception/lib/config_manager/BUILD
@@ -10,8 +10,19 @@ cc_library(
         "//modules/common:log",
         "//modules/perception/lib/base:base",
         "//modules/perception/lib/config_manager/proto:config_proto",
-        "//external:gflags",
-        "@glog//:glog",
+        "//modules/perception/common:perception_common",
+    ],
+)
+
+cc_test(
+    name = "config_manager_test",
+    srcs = ["config_manager_test.cc",],
+    size = "small",
+    data = ["//modules/perception:perception_testdata"],
+    deps = [
+        ":config_manager",
+        "//modules/perception/common:perception_common",
+        "@gtest//:main",
     ],
 )
 
