removed veh_param in st_boundary_mapper.

--- a/modules/planning/optimizer/st_graph/BUILD
+++ b/modules/planning/optimizer/st_graph/BUILD
@@ -57,6 +57,7 @@ cc_library(
     ],
     deps = [
         ":st_graph_boundary",
+        "//modules/common/configs:vehicle_config_helper",
         "//modules/common/configs/proto:vehicle_config_proto",
         "//modules/common/proto:path_point_proto",
         "//modules/common/status",
