set framework of pedestrian predictor

--- a/modules/prediction/predictor/pedestrian/BUILD
+++ b/modules/prediction/predictor/pedestrian/BUILD
@@ -8,6 +8,9 @@ cc_library(
     srcs = ["regional_predictor.cc"],
     deps = [
         "//modules/prediction/predictor:predictor",
+        "//modules/prediction/common:prediction_util",
+        "//modules/common/proto:path_point_proto",
+        "//modules/common/math:kalman_filter",
         "@glog//:glog",
     ]
 )
