--- a/modules/prediction/conf/prediction.conf
+++ b/modules/prediction/conf/prediction.conf
@@ -1,3 +1,4 @@
 --alsologtostderr=1
 --v=4
 --adapter_config_path=modules/prediction/conf/adapter.conf
+--prediction_conf_file=modules/prediction/conf/prediction_conf.pb.txt
