--- a/modules/common/util/BUILD
+++ b/modules/common/util/BUILD
@@ -18,6 +18,7 @@ cc_library(
         "//modules/common/math",
         "//modules/common/proto:path_point_proto",
         "//modules/common/time",
+        "//modules/map/proto:map_proto",
     ],
 )
 
