--- a/modules/planning/testdata/conf/adapter.conf
+++ b/modules/planning/testdata/conf/adapter.conf
@@ -1,12 +1,14 @@
 config {
   type: LOCALIZATION
   mode: RECEIVE_ONLY
-  message_history_limit: 10
 }
 config {
   type: CHASSIS
   mode: RECEIVE_ONLY
-  message_history_limit: 10
+}
+config {
+  type: ROUTING_RESULT
+  mode: RECEIVE_ONLY
 }
 config {
   type: PLANNING_TRAJECTORY
