util functions for generating pedestrian trajectories

--- a/modules/prediction/predictor/pedestrian/BUILD
+++ b/modules/prediction/predictor/pedestrian/BUILD
@@ -9,6 +9,7 @@ cc_library(
     deps = [
         "//modules/prediction/predictor:predictor",
         "//modules/prediction/common:prediction_util",
+        "//modules/prediction/common:prediction_gflags",
         "//modules/common/proto:path_point_proto",
         "//modules/common/math:kalman_filter",
         "@glog//:glog",
