--- a/modules/perception/lib/config_manager/proto/BUILD
+++ b/modules/perception/lib/config_manager/proto/BUILD
@@ -5,7 +5,6 @@ load("@org_pubref_rules_protobuf//cpp:rules.bzl", "cc_proto_library")
 cc_proto_library(
     name = "config_proto",
     protos = [
-        "config_schema.proto"
-    ]
+        "config_schema.proto",
+    ],
 )
-
