--- a/modules/perception/obstacle/common/BUILD
+++ b/modules/perception/obstacle/common/BUILD
@@ -6,15 +6,15 @@ cc_library(
     name = "perception_obstacle_common",
     srcs = [
         "geometry_util.cc",
-        ],
+    ],
     hdrs = [
-        "geometry_util.h",
         "convex_hullxy.h",
-        ],
+        "geometry_util.h",
+    ],
     deps = [
         "//modules/common:log",
-        "//modules/perception/lib/pcl_util:pcl_util",
-        "@eigen//:eigen"
+        "//modules/perception/lib/pcl_util",
+        "@eigen//:eigen",
     ],
 )
 
@@ -23,7 +23,7 @@ cc_test(
     size = "small",
     srcs = [
         "geometry_util_test.cc",
-        ],
+    ],
     deps = [
         ":perception_obstacle_common",
         "@gtest//:main",
