--- a/modules/perception/obstacle/onboard/BUILD
+++ b/modules/perception/obstacle/onboard/BUILD
@@ -7,13 +7,13 @@ cc_library(
     srcs = ["hdmap_input.cc"],
     hdrs = ["hdmap_input.h"],
     deps = [
-        "//modules/perception/lib/base:base",
-        "//modules/perception/lib/pcl_util:pcl_util",
-        "//modules/perception/common:perception_common",
-        "//modules/perception/obstacle/base:perception_obstacle_base",
+        "//modules/common",
         "//modules/common:log",
-        "//modules/common:common",
-        "//modules/map/hdmap:hdmap",
+        "//modules/map/hdmap",
+        "//modules/perception/common:perception_common",
+        "//modules/perception/lib/base",
+        "//modules/perception/lib/pcl_util",
+        "//modules/perception/obstacle/base:perception_obstacle_base",
         "@eigen//:eigen",
     ],
 )
@@ -24,15 +24,15 @@ cc_library(
     hdrs = ["lidar_process.h"],
     deps = [
         ":perception_obstacle_hdmapinput",
-        "//modules/perception/lib/base:base",
-        "//modules/perception/lib/pcl_util:pcl_util",
-        "//modules/perception/lib/config_manager:config_manager",
+        "//modules/common",
+        "//modules/common:log",
         "//modules/perception/common:perception_common",
+        "//modules/perception/lib/base",
+        "//modules/perception/lib/config_manager",
+        "//modules/perception/lib/pcl_util",
         "//modules/perception/obstacle/base:perception_obstacle_base",
         "//modules/perception/obstacle/lidar/dummy:perception_obstacle_lidar_dummy",
         "//modules/perception/obstacle/lidar/interface:perception_obstacle_lidar_interface",
-        "//modules/common:log",
-        "//modules/common:common",
         "@eigen//:eigen",
         "@ros//:ros_common",
     ],
