--- a/modules/prediction/predictor/BUILD
+++ b/modules/prediction/predictor/BUILD
@@ -4,17 +4,17 @@ package(default_visibility = ["//visibility:public"])
 
 cc_library(
     name = "predictor_factory",
-    hdrs = ["predictor_factory.h"],
     srcs = ["predictor_factory.cc"],
+    hdrs = ["predictor_factory.h"],
     deps = [
-        "//modules/prediction/predictor:predictor",
-        "//modules/prediction/predictor/vehicle:lane_sequence_predictor",
-        "//modules/prediction/predictor/vehicle:free_move_predictor",
-        "//modules/prediction/proto:prediction_conf_proto",
-        "//modules/common/util:factory",
         "//modules/common:macro",
+        "//modules/common/util:factory",
+        "//modules/prediction/predictor",
+        "//modules/prediction/predictor/vehicle:free_move_predictor",
+        "//modules/prediction/predictor/vehicle:lane_sequence_predictor",
+        "//modules/prediction/proto:prediction_conf_proto",
         "@glog//:glog",
-    ]
+    ],
 )
 
 cc_library(
@@ -22,27 +22,27 @@ cc_library(
     srcs = ["predictor_manager.cc"],
     hdrs = ["predictor_manager.h"],
     deps = [
-        "//modules/prediction/predictor:predictor",
-        "//modules/prediction/predictor:predictor_factory",
+        "//modules/common:macro",
+        "//modules/perception/proto:perception_proto",
         "//modules/prediction/container:container_manager",
         "//modules/prediction/container/obstacles:obstacles_container",
-        "//modules/perception/proto:perception_proto",
-        "//modules/prediction/proto:prediction_proto",
+        "//modules/prediction/predictor",
+        "//modules/prediction/predictor:predictor_factory",
         "//modules/prediction/proto:prediction_conf_proto",
-        "//modules/common:macro",
-        "@glog//:glog"
-    ]
+        "//modules/prediction/proto:prediction_proto",
+        "@glog//:glog",
+    ],
 )
 
 cc_library(
     name = "predictor",
-    hdrs = ["predictor.h"],
     srcs = ["predictor.cc"],
+    hdrs = ["predictor.h"],
     deps = [
-        "//modules/prediction/proto:prediction_proto",
-        "//modules/prediction/container/obstacles:obstacle",
         "//modules/common/proto:path_point_proto",
-    ]
+        "//modules/prediction/container/obstacles:obstacle",
+        "//modules/prediction/proto:prediction_proto",
+    ],
 )
 
 cpplint()
