--- a/modules/prediction/predictor/vehicle/BUILD
+++ b/modules/prediction/predictor/vehicle/BUILD
@@ -4,33 +4,33 @@ package(default_visibility = ["//visibility:public"])
 
 cc_library(
     name = "lane_sequence_predictor",
-    hdrs = ["lane_sequence_predictor.h"],
     srcs = ["lane_sequence_predictor.cc"],
+    hdrs = ["lane_sequence_predictor.h"],
     deps = [
-        "//modules/prediction/predictor:predictor",
-        "//modules/prediction/common:prediction_gflags",
-        "//modules/prediction/common:prediction_map",
-        "//modules/prediction/proto:lane_graph_proto",
-        "//modules/common/proto:path_point_proto",
         "//modules/common:log",
         "//modules/common/math:math_utils",
+        "//modules/common/proto:path_point_proto",
+        "//modules/prediction/common:prediction_gflags",
+        "//modules/prediction/common:prediction_map",
+        "//modules/prediction/predictor",
+        "//modules/prediction/proto:lane_graph_proto",
         "@eigen//:eigen",
-    ]
+    ],
 )
 
 cc_library(
     name = "free_move_predictor",
-    hdrs = ["free_move_predictor.h"],
     srcs = ["free_move_predictor.cc"],
+    hdrs = ["free_move_predictor.h"],
     deps = [
-        "//modules/prediction/predictor:predictor",
-        "//modules/prediction/proto:feature_proto",
-        "//modules/prediction/common:prediction_gflags",
-        "//modules/common/proto:path_point_proto",
-        "//modules/common/math:math_utils",
         "//modules/common:log",
+        "//modules/common/math:math_utils",
+        "//modules/common/proto:path_point_proto",
+        "//modules/prediction/common:prediction_gflags",
+        "//modules/prediction/predictor",
+        "//modules/prediction/proto:feature_proto",
         "@eigen//:eigen",
-    ]
+    ],
 )
 
 cpplint()
