--- a/modules/perception/lib/config_manager/BUILD
+++ b/modules/perception/lib/config_manager/BUILD
@@ -4,20 +4,20 @@ package(default_visibility = ["//visibility:public"])
 
 cc_library(
     name = "config_manager",
-    srcs = ["config_manager.cc",],
-    hdrs = ["config_manager.h",],
+    srcs = ["config_manager.cc"],
+    hdrs = ["config_manager.h"],
     deps = [
         "//modules/common:log",
-        "//modules/perception/lib/base:base",
-        "//modules/perception/lib/config_manager/proto:config_proto",
         "//modules/perception/common:perception_common",
+        "//modules/perception/lib/base",
+        "//modules/perception/lib/config_manager/proto:config_proto",
     ],
 )
 
 cc_test(
     name = "config_manager_test",
-    srcs = ["config_manager_test.cc",],
     size = "small",
+    srcs = ["config_manager_test.cc"],
     data = ["//modules/perception:perception_testdata"],
     deps = [
         ":config_manager",
