--- a/modules/perception/obstacle/lidar/dummy/BUILD
+++ b/modules/perception/obstacle/lidar/dummy/BUILD
@@ -5,17 +5,17 @@ package(default_visibility = ["//visibility:public"])
 cc_library(
     name = "perception_obstacle_lidar_dummy",
     srcs = [
-        "dummy_algorithms.cc"
+        "dummy_algorithms.cc",
     ],
     hdrs = [
-        "dummy_algorithms.h"
+        "dummy_algorithms.h",
     ],
     deps = [
         "//modules/common:log",
-        "//modules/perception/obstacle/lidar/interface:perception_obstacle_lidar_interface",
         "//modules/perception/obstacle/common:perception_obstacle_common",
-        "@pcl//:pcl",
+        "//modules/perception/obstacle/lidar/interface:perception_obstacle_lidar_interface",
         "@eigen//:eigen",
+        "@pcl//:pcl",
     ],
 )
 
