--- a/modules/prediction/evaluator/vehicle/BUILD
+++ b/modules/prediction/evaluator/vehicle/BUILD
@@ -4,20 +4,20 @@ package(default_visibility = ["//visibility:public"])
 
 cc_library(
     name = "mlp_evaluator",
-    hdrs = [
-        "mlp_evaluator.h",
-    ],
     srcs = [
         "mlp_evaluator.cc",
     ],
+    hdrs = [
+        "mlp_evaluator.h",
+    ],
     deps = [
-        "//modules/prediction/evaluator:evaluator",
-        "//modules/prediction/container/obstacles:obstacle",
-        "//modules/prediction/proto:lane_graph_proto",
-        "//modules/prediction/common:prediction_gflags",
         "//modules/common/math:math_utils",
-        "//modules/prediction/proto:fnn_vehicle_model_proto",
+        "//modules/prediction/common:prediction_gflags",
         "//modules/prediction/common:prediction_util",
+        "//modules/prediction/container/obstacles:obstacle",
+        "//modules/prediction/evaluator",
+        "//modules/prediction/proto:fnn_vehicle_model_proto",
+        "//modules/prediction/proto:lane_graph_proto",
     ],
 )
 
