--- a/modules/dreamview/conf/adapter.conf
+++ b/modules/dreamview/conf/adapter.conf
@@ -18,4 +18,9 @@ config {
   mode: RECEIVE_ONLY
   message_history_limit: 1
 }
+config {
+  type: PERCEPTION_OBSTACLES 
+  mode: RECEIVE_ONLY
+  message_history_limit: 1
+}
 is_ros: true
