--- a/modules/dreamview/conf/adapter.conf
+++ b/modules/dreamview/conf/adapter.conf
@@ -19,8 +19,13 @@ config {
   message_history_limit: 1
 }
 config {
-  type: PERCEPTION_OBSTACLES 
+  type: PERCEPTION_OBSTACLES
   mode: RECEIVE_ONLY
+  message_history_limit: 1
+}
+config {
+  type: PREDICTION
+  mode: PUBLISH_ONLY
   message_history_limit: 1
 }
 is_ros: true
